@@ -1,9 +1,12 @@
 package org.testng.util;
 
+import java.time.Duration;
+import java.time.Instant;
 import org.testng.internal.RuntimeBehavior;
 
 import java.text.SimpleDateFormat;
 import java.util.TimeZone;
+import org.testng.internal.Utils;
 
 /** A Utility class that deals with time. */
 public final class TimeUtils {
@@ -21,5 +24,38 @@ public final class TimeUtils {
     TimeZone timeZone = RuntimeBehavior.getTimeZone();
     sdf.setTimeZone(timeZone);
     return sdf.format(timeInMilliSeconds);
+  }
+
+  /**
+   * A sample task to be executed.
+   */
+  @FunctionalInterface
+  public interface Task {
+
+    /**
+     * The actual work to be executed.
+     */
+    void execute();
+  }
+
+  /**
+   * Helper method that can be used to compute the time.
+   *
+   * @param msg  - A user friendly message to be shown in the logs.
+   * @param task - A {@link Task} that represents the task to be executed.
+   */
+  public static void computeAndShowTime(String msg, Task task) {
+    Instant start = Instant.now();
+    try {
+      task.execute();
+    } finally {
+      Instant finish = Instant.now();
+      long timeElapsed = Duration.between(start, finish).toMillis();
+      String text = msg + " took " + timeElapsed + " ms.";
+      Utils.log(text);
+      if (timeElapsed > 20000) {
+        Utils.log("[WARNING] Probable slow call ( > 20 seconds): " + text);
+      }
+    }
   }
 }
